Initial deployment guide content

--- a/docs/partner_editable/deploy_steps.adoc
+++ b/docs/partner_editable/deploy_steps.adoc
@@ -11,7 +11,10 @@ ifdef::marketplace_subscription[]
 This Quick Start requires a subscription to the AMI for {partner-product-short-name} in AWS Marketplace.
 
 . Sign in to your AWS account.
-. Open the page for the {marketplace_listing_url}[{partner-product-short-name} AMI in AWS Marketplace^], and then choose *Continue to Subscribe*.
+. Open https://aws.amazon.com/marketplace/server/procurement?productId=edeb9751-4819-40ad-a593-04b6572694e7[the page for the Qumulo AMI in AWS Marketplace], and then choose *Continue to Subscribe*.
+. Review the terms and conditions for software usage, and then choose *Accept Terms*. +
+  A confirmation page loads, and an email confirmation is sent to the account owner. For detailed subscription instructions, see the https://aws.amazon.com/marketplace/help/200799470[AWS Marketplace documentation^].
+. Open https://aws.amazon.com/marketplace/pp/B07CSG43VK?qid=1614537105700&sr=0-1&ref_=srh_res_product_title[the page for the Teradici AMI in AWS Marketplace],  and then choose *Continue to Subscribe*.
 . Review the terms and conditions for software usage, and then choose *Accept Terms*. +
   A confirmation page loads, and an email confirmation is sent to the account owner. For detailed subscription instructions, see the https://aws.amazon.com/marketplace/help/200799470[AWS Marketplace documentation^].
 
