--- a/docs/partner_editable/architecture.adoc
+++ b/docs/partner_editable/architecture.adoc
@@ -10,18 +10,18 @@ image::../images/architecture_diagram.png[Architecture,width=100%,height=100%]
 
 As shown in <<architecture1>>, the Quick Start sets up the following:
 
-* A highly available architecture that spans two Availability Zones.*
 * A VPC configured with public and private subnets, according to AWS
 best practices, to provide you with your own virtual network on AWS.*
-* In the public subnets:
-** Managed network address translation (NAT) gateways to allow outbound
-internet access for resources in the private subnets.*
-** A Linux bastion host in an Auto Scaling group to allow inbound Secure
-Shell (SSH) access to EC2 instances in public and private subnets.*
+* In the public subnet:
+** A managed network address translation (NAT) gateway to allow outbound
+internet access for resources in the private subnet.*
+** A network load balancer to divide network traffic among the Qumulo cluster nodes.
 * In the private subnets:
-** <item>.
-** <item>.
+** A cluster of four Qumulo EC2 instances.
+** An Amazon Elastic Block Store (EBS) shared drive.
+** Lambda functions to monitor and report on the Qumulo environment.
+** An EC2 instance acting as an Active Directory domain controller.
+** One or more EC2 instances running Teradici for streaming editorial workspace environments via PCoIP.
 // Add bullet points for any additional components that are included in the deployment. Make sure that the additional components are also represented in the architecture diagram. End each bullet with a period.
-* <describe any additional components>.
 
 [.small]#*The template that deploys the Quick Start into an existing VPC skips the components marked by asterisks and prompts you for your existing VPC configuration.#
