--- a/docs/partner_editable/faq_troubleshooting.adoc
+++ b/docs/partner_editable/faq_troubleshooting.adoc
@@ -18,4 +18,6 @@ For more information, see https://docs.aws.amazon.com/AWSCloudFormation/latest/U
 
 == Troubleshooting
 
-<Steps for troubleshooting the deployment.>
+If the stack has deployed successfully but the shared network drive is unavailable, make sure the provisioning server was able to successfully complete its
+post-deployment steps. You can SSH into the provisioning server and check the log files at /var/log. Also ensure the .PEM file saved in Secrets Manager is
+the same key pair that was selected for the KeyPair parameter.
