--- a/docs/partner_editable/pre-reqs.adoc
+++ b/docs/partner_editable/pre-reqs.adoc
@@ -1,13 +1,16 @@
 // If no preperation is required, remove all content from here
 
-==== Prepare your AWS account
-
-_Describe any setup required in the AWS account prior to template launch_
-
-==== Prepare your {partner-company-name} account
-
-_Describe any setup required in the partner portal/account prior to template launch_
-
 ==== Prepare for the deployment
 
-_Describe any preparation required to complete the product build, such as obtaining licenses or placing files in S3_
+The Studio Q deployment requires the EC2 private key .PEM file to be stored in Secrets Manager:
+
+1. Navigate to https://console.aws.amazon.com/secretsmanager/home[AWS Secrets Manager]
+2. Select *Store a new secret*
+3. Select *Other type of secrets*
+4. Select *Plaintext*
+5. Paste the content of the .PEM file into the box
+6. Save the secret
+
+[#prereqs1]
+.PEM file stored in AWS Secrets Manager
+image::../images/SecretKey.png[Architecture,width=100%,height=100%]
