--- a/docs/partner_editable/service_limits.adoc
+++ b/docs/partner_editable/service_limits.adoc
@@ -3,12 +3,13 @@
 |Resource |This deployment uses
 
 // Space needed to maintain table headers
-|VPCs |<n>
-|Elastic IP addresses |<n>
-|Security groups |<n>
-|AWS Identity and Access Management (IAM) roles |<n>
-|Auto Scaling groups |<n>
-|Application Load Balancers |<n>
-|Network Load Balancers |<n>
-|<type> instances |<n>
+|VPCs |1
+|Elastic IP addresses |2
+|Security groups |8
+|AWS Identity and Access Management (IAM) roles |4
+|Network Load Balancers |1
+|m5.2xlarge instances |4
+|t2.small instances |1
+|g4dn instances !1
+|Lambda functions |2
 |===
