--- a/docs/partner_editable/licenses.adoc
+++ b/docs/partner_editable/licenses.adoc
@@ -1,1 +1,1 @@
-The Quick Start requires a subscription to the Amazon Machine Image (AMI) for Qumulo and the AMI for Teradica, both of which are available from https://aws.amazon.com/marketplace/[AWS Marketplace^]. Additional pricing, terms, and conditions may apply. For instructions, see link:#step-2.-subscribe-to-the-software-ami[step 2] in the deployment section.
+This Quick Start requires a subscription to the Amazon Machine Image (AMI) for the Qumulo 1TB or 12TB usable capacity options and the AMI for Teradici, both of which are available from https://aws.amazon.com/marketplace/[AWS Marketplace^]. Additional pricing, terms, and conditions may apply. For instructions, see link:#step-2.-subscribe-to-the-software-ami[step 2] in the deployment section.
