--- a/docs/partner_editable/overview_target_and_usage.adoc
+++ b/docs/partner_editable/overview_target_and_usage.adoc
@@ -2,6 +2,7 @@
 // Identify your target audience and explain how/why they would use this Quick Start.
 //Avoid borrowing text from third-party websites (copying text from AWS service documentation is fine). Also, avoid marketing-speak, focusing instead on the technical aspect.
 
-This guide provides instructions for deploying the {partner-product-short-name} Quick Start reference architecture on the AWS Cloud.
+This guide provides instructions for deploying the {partner-product-short-name} Quick Start reference architecture in the AWS cloud.
 
-This Quick Start is for users who want to build a remote media editorial environment consisting of a Qumulo cluster and one or more remote workstations.
+This Quick Start is for users who want to build a remote media editorial environment consisting of a Qumulo cluster and one or more editorial workstations all hosted in AWS.
+
