--- a/docs/partner_editable/regions.adoc
+++ b/docs/partner_editable/regions.adoc
@@ -1,20 +1,22 @@
 This Quick Start supports the following Regions:
 
-* ap-northeast-1, Asia Pacific (Tokyo)
-* ap-northeast-2, Asia Pacific (Seoul)
-* ap-south-1, Asia Pacific (Mumbai)
-* ap-southeast-1, Asia Pacific (Singapore)
-* ap-southeast-2, Asia Pacific (Sydney)
-* ca-central-1, Canada (Central)
-* eu-central-1, Europe (Frankfurt)
-* eu-west-1, Europe (Ireland)
-* eu-west-2, Europe (London)
-* eu-west-3, Europe (Paris)
-* sa-east-1, South America (Sao Paulo)
-* us-east-1, US East (N. Virginia)
-* us-east-2, US East (Ohio)
-* us-west-1, US West (N. California)
-* us-west-2, US West (Oregon)
-
+* Americas
+** us-east-1, US East (N. Virginia)
+** us-east-2, US East (Ohio)
+** us-west-1, US West (N. California)
+** us-west-2, US West (Oregon)
+** ca-central-1, Canada (Central)
+** sa-east-1, South America (Sao Paulo)
+* Asia Pacific
+** ap-northeast-1, Asia Pacific (Tokyo)
+** ap-northeast-2, Asia Pacific (Seoul)
+** ap-south-1, Asia Pacific (Mumbai)
+** ap-southeast-1, Asia Pacific (Singapore)
+** ap-southeast-2, Asia Pacific (Sydney)
+* Europe/Middle East/Africa
+** eu-central-1, Europe (Frankfurt)
+** eu-west-1, Europe (Ireland)
+** eu-west-2, Europe (London)
+** eu-west-3, Europe (Paris)
 
 //Full list: https://docs.aws.amazon.com/general/latest/gr/rande.html
