--- a/docs/partner_editable/architecture.adoc
+++ b/docs/partner_editable/architecture.adoc
@@ -20,17 +20,18 @@ internet access for resources in the private subnet.*
 * In the private subnet:
 ** A cluster of four Qumulo EC2 instances providing 1TB or 12TB of usable capacity.
 ** Multiple Amazon Elastic Block Store (EBS) volumes connected to the Qumulo cluster.
-*** 1TB usable capacity: 24x 100GiB EBS gp2 volumes
-*** 12TB usable capacity: 20x 100GiB EBS gp2 volumes and 40x 500GiB EBS st1 volumes
+*** 1TB usable capacity: 24x 100GiB EBS gp2 volumes.
+*** 12TB usable capacity: 20x 100GiB EBS gp2 volumes and 40x 500GiB EBS st1 volumes.
 ** Two Lambda functions to monitor and report on the Qumulo environment.
 *** One Lambda function sends metrics for the Qumulo cluster to CloudWatch.
 *** The other Lambda function monitors the health of EBS volumes and autmatically replaces any unhealthy volumes.
 ** An EC2 t3.large instance acting as an Active Directory domain controller and local DNS server.
 *** All workstations and the Qumulo cluster are joined to the AD domain automatically.
-*** The AD server also provides all DNS services local to the VPC forwarding public requests to R53.
-** A provisioner instance that configures:
-*** Qumulo cluster users, roles, IP failover, an SMB share, and joins the cluster to the AD domain.
-*** Tags all EBS volumes with the Stack Name and modifies the KMS Customer Managed Key (CMK) policy if a CMK is specified in the template.
+*** The AD server also provides all DNS services local to the VPC forwarding public requests to Route53.
+** A temporary provisioner instance that performs the following:
+*** Creates Qumulo cluster users, roles, IP failover, and an SMB share.
+*** Joins the cluster to the AD domain.
+*** Tags all EBS volumes with the CloudFormation stack name and modifies the KMS Customer Managed Key (CMK) policy if a CMK is specified in the template.
 // Add bullet points for any additional components that are included in the deployment. Make sure that the additional components are also represented in the architecture diagram. End each bullet with a period.
 
 [.small]#*The template that deploys the Quick Start into an existing VPC skips the components marked by asterisks and prompts you for your existing VPC configuration.#
