--- a/docs/partner_editable/deploy_steps.adoc
+++ b/docs/partner_editable/deploy_steps.adoc
@@ -6,7 +6,7 @@
 
 // Optional based on Marketplace listing. Not to be edited
 ifdef::marketplace_subscription[]
-=== Subscribe to the {partner-product-short-name} AMI
+=== Subscribe to the Marketplace AMIs
 
 This Quick Start requires a subscription to the AMI for {partner-product-short-name} in AWS Marketplace.
 
