--- a/docs/partner_editable/service_limits.adoc
+++ b/docs/partner_editable/service_limits.adoc
@@ -4,11 +4,11 @@
 
 // Space needed to maintain table headers
 |VPCs |1
-|Elastic IP addresses |1 for NAT Gateway, plus 1 per Workstations
+|Elastic IP addresses |1 for NAT Gateway, plus 1 for each workstation
 |Security groups |6
-|AWS Identity and Access Management (IAM) roles |5, plus 1 per Workstation
+|AWS Identity and Access Management (IAM) roles |5, plus 1 for each workstation
 |m5.2xlarge, m5.4xlarge, m5.8xlarge, or c5n.9xlarge instances |4
 |t3.large instances |2
-|g4dn.2xlarge, g4dn.4xlarge, g4dn.8xlarge, or g4dn.16xlarge instances |1 per workstation
+|g4dn.2xlarge, g4dn.4xlarge, g4dn.8xlarge, or g4dn.16xlarge instances |1 for each workstation
 |Lambda functions |2
 |===
