--- a/docs/partner_editable/_settings.adoc
+++ b/docs/partner_editable/_settings.adoc
@@ -1,6 +1,6 @@
 // Change the following attributes.
 :quickstart-project-name: quickstart-qumulo-studio-q
-:partner-product-name: Studio Q
+:partner-product-name: Qumulo Studio Q
 // For the following attribute, if you have no short name, enter the same name as partner-product-name.
 :partner-product-short-name: Studio Q
 // If there's no partner, comment partner-company-name and partner-contributors.
