--- a/docs/partner_editable/architecture.adoc
+++ b/docs/partner_editable/architecture.adoc
@@ -7,9 +7,9 @@ AWS Cloud.
 .Quick Start architecture for {partner-product-short-name} on AWS
 image::../images/architecture_diagram.png[Architecture,width=100%,height=100%]
 
-As shown in <<architecture1>>, the Quick Start sets up the following:
+As shown in <<aws-quickstart-graphic>>, the Quick Start sets up the following:
 
-* A VPC configured with public and private subnets, according to AWS
+* A virtual private cloud (VPC) configured with public and private subnets, according to AWS
 best practices, to provide you with your own virtual network on AWS.*
 * In the public subnet:
 ** A managed network address translation (NAT) gateway to allow outbound.
