--- a/docs/partner_editable/architecture.adoc
+++ b/docs/partner_editable/architecture.adoc
@@ -9,11 +9,9 @@ image::../images/architecture_diagram.png[Architecture,width=100%,height=100%]
 
 As shown in <<architecture1>>, the Quick Start sets up the following:
 
-* A VPC configured with public and private subnets, according to AWS
-best practices, to provide you with your own virtual network on AWS.*
+* A VPC configured with public and private subnets, according to AWS best practices, to provide you with your own virtual network on AWS.*
 * In the public subnet:
-** A managed network address translation (NAT) gateway to allow outbound.
-internet access for resources in the private subnet.*
+** A managed network address translation (NAT) gateway to allow outbound internet access for resources in the private subnet.*
 ** One or more EC2 g4dn instances running Windows Server 2019.
 *** Teradici PCoIP is installed for streaming the editorial workspace to remote editors.
 *** Windows is configured in an optimized fashion for Adobe Premiere Pro with a pop-up per boot cycle for Adobe Creative Cloud login.
@@ -24,14 +22,13 @@ internet access for resources in the private subnet.*
 *** 12TB usable capacity: 20x 100GiB EBS gp2 volumes and 40x 500GiB EBS st1 volumes.
 ** Two Lambda functions to monitor and report on the Qumulo environment.
 *** One Lambda function sends metrics for the Qumulo cluster to CloudWatch.
-*** The other Lambda function monitors the health of EBS volumes and autmatically replaces any unhealthy volumes.
-** An EC2 m5.large instance acting as an Active Directory domain controller and local DNS server.
+*** The other Lambda function monitors the health of EBS volumes, autmatically replaces any unhealthy volumes, and delivers SNS notifications.
+** An EC2 m5.large instance acting as an Active Directory (AD) domain controller and local DNS server.
 *** All workstations and the Qumulo cluster are joined to the AD domain automatically.
-*** The AD server also provides all DNS services local to the VPC forwarding public requests to Route53.
+*** The AD server also provides all DNS services local to the VPC while forwarding public requests to Route53.
 ** A temporary provisioner instance that performs the following:
 *** Creates Qumulo cluster users, roles, IP failover, and an SMB share.
 *** Joins the cluster to the AD domain.
 *** Tags all EBS volumes with the CloudFormation stack name and modifies the KMS Customer Managed Key (CMK) policy if a CMK is specified in the template.
-// Add bullet points for any additional components that are included in the deployment. Make sure that the additional components are also represented in the architecture diagram. End each bullet with a period.
 
 [.small]#*The template that deploys the Quick Start into an existing VPC skips the components marked by asterisks and prompts you for your existing VPC configuration.#
