--- a/docs/partner_editable/deploy_steps.adoc
+++ b/docs/partner_editable/deploy_steps.adoc
@@ -8,18 +8,16 @@
 ifdef::marketplace_subscription[]
 === Subscribe to the Marketplace AMIs
 
-This Quick Start requires a subscription to the AMI for {partner-product-short-name} in AWS Marketplace.
+This Quick Start requires a subscription to the AMIs for {partner-product-short-name} and Teradici in AWS Marketplace.
 
 . Sign in to your AWS account.
-. Open https://aws.amazon.com/marketplace/server/procurement?productId=edeb9751-4819-40ad-a593-04b6572694e7[the page for the Qumulo 1TB usable capacity AMI in AWS Marketplace^] or open https://aws.amazon.com/marketplace/server/procurement?productId=ffcf6347-ca3c-4ed8-b009-b954f01444f6[the page for the Qumulo 12TB usable capacity AMI in AWS Marketplace^], and then choose *Continue to Subscribe*.  Both offers may be accepted.  You only be charged for what is deployed.
+. Open https://aws.amazon.com/marketplace/server/procurement?productId=edeb9751-4819-40ad-a593-04b6572694e7[the page for the Qumulo 1TB usable capacity AMI in AWS Marketplace^] or open https://aws.amazon.com/marketplace/server/procurement?productId=ffcf6347-ca3c-4ed8-b009-b954f01444f6[the page for the Qumulo 12TB usable capacity AMI in AWS Marketplace^], and then choose *Continue to Subscribe*.  Both offers may be accepted.  You will only be charged for what is deployed.
 . Review the terms and conditions for software usage, and then choose *Accept Terms*. +
   A confirmation page loads, and an email confirmation is sent to the account owner. For detailed subscription instructions, see the https://aws.amazon.com/marketplace/help/200799470[AWS Marketplace documentation^].
   When the subscription process is complete, continue to step 4. *Do not* provision the software from AWS Marketplace—the Quick Start deploys the AMI for you.
 . Open https://aws.amazon.com/marketplace/pp/B07CSG43VK?qid=1614537105700&sr=0-1&ref_=srh_res_product_title[the page for the Teradici AMI in AWS Marketplace],  and then choose *Continue to Subscribe*.
 . Review the terms and conditions for software usage, and then choose *Accept Terms*. +
-  A confirmation page loads, and an email confirmation is sent to the account owner. For detailed subscription instructions, see the https://aws.amazon.com/marketplace/help/200799470[AWS Marketplace documentation^].
-
-. When the subscription process is complete, exit out of AWS Marketplace without further action. *Do not* provision the software from AWS Marketplace—the Quick Start deploys the AMI for you.
+  A confirmation page loads, and an email confirmation is sent to the account owner. For detailed subscription instructions, see the https://aws.amazon.com/marketplace/help/200799470[AWS Marketplace documentation^]. When the subscription process is complete, exit out of AWS Marketplace without further action. *Do not* provision the software from AWS Marketplace—the Quick Start deploys the AMI for you.
 endif::marketplace_subscription[]
 // \Not to be edited
 
