--- a/docs/partner_editable/overview_target_and_usage.adoc
+++ b/docs/partner_editable/overview_target_and_usage.adoc
@@ -4,5 +4,5 @@
 
 This guide provides instructions for deploying the {partner-product-short-name} Quick Start reference architecture in the AWS cloud.
 
-This Quick Start is for users who want to build a remote media editorial environment consisting of a Qumulo cluster and one or more editorial workstations all hosted in AWS.
+This Quick Start is for users who want to build a remote media editorial environment consisting of a Qumulo cluster and one or more editorial workstations all hosted on AWS.
 
