--- a/docs/partner_editable/product_description.adoc
+++ b/docs/partner_editable/product_description.adoc
@@ -2,6 +2,8 @@
 // Briefly describe the software. Use consistent and clear branding. 
 // Include the benefits of using the software on AWS, and provide details on usage scenarios.
 
-The {partner-product-short-name} Quick Start is focused on rapidly building a complete non-linear editing environment for remote editorial creative teams.  Qumulo's File Data Platform forms the file data foundation so all files are available to all editors for collaborative editorial workflows. For this Quick Start, 1TB and 12TB usable capacity options are available. Workstations are built on the powerful AWS g4dn family of Elastic Cloud Compute (EC2) instances with nVidia T4 GPUs and a Teradici PCoIP agent on workstation. With the Studio Q solution, editors have the same editorial experience as if all their resources were local.
+Qumulo is a high-performance, multi-protocol file data platform with petabyte scale for managing billions of files in a single namespace on AWS. Qumulo's file data platform is the foundation that makes all files available to all editors for collaborative editorial workflows. 
 
-Qumulo is a high-performance, multi-protocol File Data Platform with Petabyte scale for billions of files in a single name space on AWS.  If larger editorial envrionments are of interest please contact Qumulo at mailto:studioq@qumulo.com[studioq@qumulo.com^].
+This Quick Start provides options for 1TB and 12TB usable capacity. Workstations are built on the powerful AWS G4dn family of Amazon Elastic Cloud Compute (Amazon EC2) instances with NVIDIA T4 GPUs and a Teradici PCoIP agent on workstation. With Qumulo's {partner-product-short-name} solution, editors have the same editorial experience as if they are working with local resources.
+
+If you prefer larger editorial envrionments, contact Qumulo at mailto:studioq@qumulo.com[studioq@qumulo.com^].
