--- a/docs/partner_editable/deploy_steps.adoc
+++ b/docs/partner_editable/deploy_steps.adoc
@@ -1,23 +1,27 @@
 // We need to work around Step numbers here if we are going to potentially exclude the AMI subscription
 === Sign in to your AWS account
 
-. Sign in to your AWS account at https://aws.amazon.com with an IAM user role that has the necessary permissions. For details, see link:#_planning_the_deployment[Planning the deployment] earlier in this guide.
+. Sign in to your AWS account at https://aws.amazon.com with an AWS Identity and Access Management (IAM) user role that has the necessary permissions. For details, see link:#_planning_the_deployment[Planning the deployment] earlier in this guide.
 . Make sure that your AWS account is configured correctly, as discussed in the link:#_technical_requirements[Technical requirements] section.
 
 // Optional based on Marketplace listing. Not to be edited
 ifdef::marketplace_subscription[]
 === Subscribe to the Marketplace AMIs
 
-This Quick Start requires a subscription to the AMIs for {partner-product-short-name} and Teradici in AWS Marketplace.
+This Quick Start requires a subscription to the Amazon Machine Image (AMI) for {partner-product-short-name} and Teradici in AWS Marketplace.
 
 . Sign in to your AWS account.
-. Open https://aws.amazon.com/marketplace/server/procurement?productId=edeb9751-4819-40ad-a593-04b6572694e7[the page for the Qumulo 1TB usable capacity AMI in AWS Marketplace^] or open https://aws.amazon.com/marketplace/server/procurement?productId=ffcf6347-ca3c-4ed8-b009-b954f01444f6[the page for the Qumulo 12TB usable capacity AMI in AWS Marketplace^], and then choose *Continue to Subscribe*.  Both offers may be accepted.  You will only be charged for what is deployed.
+. Open one of the following two Qumulo pages in the AWS Marketplace, and choose *Continue to Subscribe*. Regardless of which offer you choose, you are only charged for what is deployed.
+
+* https://aws.amazon.com/marketplace/server/procurement?productId=edeb9751-4819-40ad-a593-04b6572694e7[1 TB usable capacity AMI^]  
+* https://aws.amazon.com/marketplace/server/procurement?productId=ffcf6347-ca3c-4ed8-b009-b954f01444f6[12 TB usable capacity AMI^],
+
 . Review the terms and conditions for software usage, and then choose *Accept Terms*. +
   A confirmation page loads, and an email confirmation is sent to the account owner. For detailed subscription instructions, see the https://aws.amazon.com/marketplace/help/200799470[AWS Marketplace documentation^].
-  When the subscription process is complete, continue to step 4. *Do not* provision the software from AWS Marketplace—the Quick Start deploys the AMI for you.
-. Open https://aws.amazon.com/marketplace/pp/B07CSG43VK?qid=1614537105700&sr=0-1&ref_=srh_res_product_title[the page for the Teradici AMI in AWS Marketplace],  and then choose *Continue to Subscribe*.
+  When the subscription process is complete, continue to step 4. *Do not* provision the software from AWS Marketplace, as the Quick Start deploys the AMI for you.
+. Still in the AWS Marketplace, open the https://aws.amazon.com/marketplace/pp/B07CSG43VK?qid=1614537105700&sr=0-1&ref_=srh_res_product_title[Teradici AMI] page, and choose *Continue to Subscribe*.
 . Review the terms and conditions for software usage, and then choose *Accept Terms*. +
-  A confirmation page loads, and an email confirmation is sent to the account owner. For detailed subscription instructions, see the https://aws.amazon.com/marketplace/help/200799470[AWS Marketplace documentation^]. When the subscription process is complete, exit out of AWS Marketplace without further action. *Do not* provision the software from AWS Marketplace—the Quick Start deploys the AMI for you.
+  A confirmation page loads, and an email confirmation is sent to the account owner. For detailed subscription instructions, see the https://aws.amazon.com/marketplace/help/200799470[AWS Marketplace documentation^]. When the subscription process is complete, exit out of AWS Marketplace without further action. *Do not* provision the software from AWS Marketplace, as the Quick Start deploys the AMI for you.
 endif::marketplace_subscription[]
 // \Not to be edited
 
